<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2025 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".compact.ConfigurablePlaceDetailsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/my_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/my_location_button_content_description"
        app:layout_constraintBottom_toTopOf="@+id/configure_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/outline_my_location_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/configure_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/configure_button_content_description"
        app:layout_constraintBottom_toTopOf="@+id/place_details_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/outline_settings_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Wrapper to hold the fragment, the dismiss button, AND the loader -->
    <FrameLayout
        android:id="@+id/place_details_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <!-- The container for the fragment -->
        <FrameLayout
            android:id="@+id/place_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- The loader, shown on top of the empty container -->
        <ProgressBar
            android:id="@+id/loading_indicator_configurable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <!-- The dismiss button with a background. It's hidden initially. -->
        <ImageButton
            android:id="@+id/dismiss_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/close_button_background"
            android:contentDescription="@string/dismiss_button_content_description"
            android:padding="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_close"
            app:tint="@android:color/white"
            tools:visibility="visible" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
